exports[`test appends classes if present 1`] = `
<form id="2" onSubmit={[Function]} className="hard-ends append me" action={true} method="POST" style={{...}}>
<FieldSet theme="fieldsetTheme">
<h1>
test
</h1>
</FieldSet>
</form>
`;

exports[`test overrides with theme if theme 1`] = `
<form id="2" onSubmit={[Function]} className="override" action={true} method="POST" style={{...}}>
<FieldSet theme="fieldsetTheme">
<h1>
test
</h1>
</FieldSet>
</form>
`;

exports[`test renders with props 1`] = `
<form id="2" onSubmit={[Function]} className="hard-ends" action={true} method="POST" style={{...}}>
<FieldSet theme="fieldsetTheme">
<h1>
test
</h1>
</FieldSet>
</form>
`;
